[package]
name = "wifimenu"
description = "A script to connect to wireless networks in OpenBSD in a user-friendly manner"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/raccoon-byte/wifimenu"
readme = "README.md"
license = "2-clause BSD"
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.94"
clippy = "0.0.302"
regex = "1.10.6"
rpassword = "7.3.1"
terminal_size = "0.4.0"
